--- a/src/pages/picture/picture.scss
+++ b/src/pages/picture/picture.scss
@@ -139,14 +139,23 @@
   box-shadow: 0 0 10rpx rgba(0, 0, 0, .15);
   
   input {
-    vertical-align: top;
+    display: inline-block;
+    width: 645rpx;
+    vertical-align: middle;
     font-size: 30rpx;
     padding: 10rpx;
     color: $colorComment;
     border-bottom: 2px solid $colorGrey2;
   }
+  
+  image {
+    display: inline-block;
+    margin-left: 10rpx;
+    vertical-align: middle;
+    width: 48rpx;
+    height: 48rpx;
+  }
 }
 .input-placeholder {
   color: $colorGrey2;
-  
 }
