fix(pages/picture): 更改喜欢描述，修复评论框样式

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,7 +2,7 @@ page {
   font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
 }
 
-view, scroll-view, input, form, text {
+view, scroll-view, form, text {
   box-sizing: border-box;
 }
 
