--- a/src/pages/picture/picture.scss
+++ b/src/pages/picture/picture.scss
@@ -134,7 +134,7 @@
     width: 645rpx;
     vertical-align: middle;
     font-size: 30rpx;
-    padding: 10rpx;
+    padding: 0;
     color: $colorComment;
     border-bottom: 2rpx solid $colorGrey2;
   }
