--- a/src/pages/picture/picture.scss
+++ b/src/pages/picture/picture.scss
@@ -40,6 +40,8 @@
       margin: 0 auto 0 13rpx;
     }
     .like, .share {
+      width: 92rpx;
+      
       image {
         vertical-align: middle;
         margin-right: 8rpx;
@@ -125,7 +127,7 @@
   bottom: 0;
   width: 100%;
   height: 82rpx;
-  padding: 12rpx 24rpx 22rpx;
+  padding: 12rpx 24rpx 0;
   background: #fff;
   box-shadow: 0 0 10rpx rgba(0, 0, 0, .15);
   
@@ -141,7 +143,7 @@
   
   image {
     display: inline-block;
-    margin-left: 10rpx;
+    padding: 5rpx 0 5rpx 10rpx;
     vertical-align: middle;
     width: 48rpx;
     height: 48rpx;
