feat(pages/picture): 对应 api 变更属性名，增加无评论提示

--- a/src/pages/picture/picture.scss
+++ b/src/pages/picture/picture.scss
@@ -102,8 +102,11 @@
     }
   }
   
-  .comments {
-    margin-top: 20rpx;
+
+  .no-comment-tip {
+    line-height: 4;
+    text-align: center;
+    font-size: 28rpx;
   }
   
   .comment {
