feat(pages/index): 更新普通相册描述

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -72,6 +72,13 @@
     .lunar {
     }
   }
+  
+  .update-time {
+    line-height: 146rpx;
+    text-align: center;
+    font-size: 30rpx;
+    color: $colorFontDay;
+  }
 }
 .swiper {
   height: 1000rpx;
