fix(pages/index): 修复分页字号

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -86,7 +86,7 @@
 
 .pagination {
   text-align: center;
-  font-size: 28px;
+  font-size: 30rpx;
   font-weight: 500;
   color: $colorFontPage;
   
