fix: 加长加载提示的时间

--- a/src/pages/picture/picture.scss
+++ b/src/pages/picture/picture.scss
@@ -35,10 +35,9 @@
     margin-top: 45rpx;
     color: $colorInfo;
     font-size: 24rpx;
+    height: 29rpx;
+    line-height: 29rpx;
     
-    .date, .nickname {
-      vertical-align: middle;
-    }
     .nickname {
       margin: 0 auto 0 13rpx;
     }
